// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe de incrementar en 1 el count 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    +1
  </button>
</div>
`;

exports[`ProductCard debe de mostrar correctamente el componente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Hola mundo
  </h1>
</div>
`;
